<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from"
        android:visibility="gone">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/number"
            app:layout_constraintStart_toStartOf="@+id/tv_card_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:text="@string/eur"
            app:layout_constraintStart_toEndOf="@id/tv_number"
            app:layout_constraintTop_toTopOf="@id/tv_number" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/visa"
            app:layout_constraintStart_toEndOf="@+id/tv_type"
            app:layout_constraintTop_toTopOf="@id/tv_number" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_from_2"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/from_container"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/to_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_2">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_card_name_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_number_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/number"
            app:layout_constraintStart_toStartOf="@+id/tv_card_name_to"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_name_to" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:text="@string/eur"
            app:layout_constraintStart_toEndOf="@id/tv_number_to"
            app:layout_constraintTop_toTopOf="@id/tv_number_to" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_card_type_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/visa"
            app:layout_constraintStart_toEndOf="@+id/tv_type_to"
            app:layout_constraintTop_toTopOf="@id/tv_number_to" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_from_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="720dp"
        android:layout_marginEnd="20dp"
        android:text="@string/from_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/to_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_from_account" />

</androidx.constraintlayout.widget.ConstraintLayout>