<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/number"
        app:layout_constraintStart_toStartOf="@+id/tv_card_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:text="@string/eur"
        app:layout_constraintStart_toEndOf="@id/tv_number"
        app:layout_constraintTop_toTopOf="@id/tv_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_card_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/visa"
        app:layout_constraintStart_toEndOf="@+id/tv_type"
        app:layout_constraintTop_toTopOf="@id/tv_number" />

</androidx.constraintlayout.widget.ConstraintLayout>